Format preambles and colored theorems!

--- a/S2_P2_AN2.tex
+++ b/S2_P2_AN2.tex
@@ -599,7 +599,7 @@ Since we are in a critical point second order Taylor expansion looks like
 where $H = \Hg(\vec x_0)$.
 Then $f(\vec x_0 + \vec h) - f(\vec x_0) \sim \vec h^T H \vec h$ so it should have the sign of $\vec h^T H \vec h$.
 
-\begin{definition}[\say{sign} of a matrix]
+\begin{definition}[sign of a matrix]
     Let $H$ be a $d\times d$ symmetric matrix. We say $H$ is
     \begin{itemize}
         \item \emph{positive definite} if $\vec h^T H \vec h > 0$ for $\vec h \in \R^d \setminus \{0\}$;
