Fix mono bold font and some typos

--- a/S2_P2_CS2_CheatSheet.tex
+++ b/S2_P2_CS2_CheatSheet.tex
@@ -22,7 +22,7 @@
 
 \usepackage{fontspec}
 \setsansfont{Ubuntu}
-\setmonofont{Fira Code}
+\setmonofont{FiraCode Nerd Font}
 % Use sans-serif font
 \renewcommand{\familydefault}{\sfdefault}
 
