--- a/S2_P2_PROB.tex
+++ b/S2_P2_PROB.tex
@@ -1625,7 +1625,7 @@ Moreover, we see that \autoref{eq:mgf:taylor} is the taylor expansion of $M_X(t)
     Let $X$ be a random variable and $r > 0$ such that $E(\abs{X}^r) < + \infty$.
     Then
     \begin{equation}
-        P(\abs{X} \geq K) \leq \frac{E(\abs{X}^2)}{k^r}
+        P(\abs{X} \geq K) \leq \frac{E(\abs{X}^r)}{k^r}
     \end{equation}
 \end{theorem}
 
