--- a/preamble_base.sty
+++ b/preamble_base.sty
@@ -29,7 +29,7 @@
 \RequirePackage{fontspec}
 
 \setsansfont{Ubuntu}
-\setmonofont{Fira Code}
+\setmonofont{FiraCode Nerd Font} % the normal font doesn't support bold for some reason
 
 % Use sans-serif by default
 \renewcommand{\familydefault}{\sfdefault}
